--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postcss": "^8.4.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.31.1",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
